APB-9906: typesafe Formatters, Formats, Bindables, etc
Signed-off-by: paweldigital <173694350+paweldigital@users.noreply.github.com>

--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/Layout.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/Layout.scala.html
@@ -20,6 +20,7 @@
 @import uk.gov.hmrc.hmrcfrontend.views.Implicits.RichErrorSummary
 @import uk.gov.hmrc.govukfrontend.views.html.components._
 @import uk.gov.hmrc.agentregistrationfrontend.controllers.routes
+@import uk.gov.hmrc.agentregistrationfrontend.util.RequestSupport.isSignedIn
 
 @this(
         appConfig: AppConfig,
@@ -39,9 +40,6 @@
         templateStyles: Option[Html] = None
 )(contentBlock: Html)(implicit request: RequestHeader, messages: Messages)
 
-@isSignedIn = @{
-    try { request.session.get("authToken").isDefined } catch { case _: Throwable => false }
-}
 @head = {
     @if(isSignedIn) {
         @hmrcTimeoutDialogHelper(
