--- a/app/uk/gov/hmrc/agentregistrationfrontend/testOnly/views/GrsStub.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/testOnly/views/GrsStub.scala.html
@@ -25,6 +25,7 @@
 @import uk.gov.hmrc.agentregistration.shared.util.SafeEquals.*
 @import java.util.UUID
 @import uk.gov.hmrc.agentregistration.shared.BusinessType.*
+@import uk.gov.hmrc.agentregistration.shared.BusinessType.Partnership.*
 
 @this(
         layout: Layout,
