APB-9916 tests for Signing In to GRS

--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/amls/AmlsSupervisoryBodyPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/amls/AmlsSupervisoryBodyPage.scala.html
@@ -23,7 +23,7 @@
 @import uk.gov.hmrc.agentregistration.shared.AmlsName
 
 @import uk.gov.hmrc.agentregistrationfrontend.views.html.Layout
-@import uk.gov.hmrc.agentregistrationfrontend.views.html.register.partials.ContinueOrSaveForLater
+@import uk.gov.hmrc.agentregistrationfrontend.views.html.apply.partials.ContinueOrSaveForLater
 
 @this(
         layout: Layout,
