--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/amls/AmlsRegistrationNumberPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/amls/AmlsRegistrationNumberPage.scala.html
@@ -19,7 +19,7 @@
 @import uk.gov.hmrc.agentregistrationfrontend.forms.AmlsRegistrationNumberForm
 @import uk.gov.hmrc.agentregistrationfrontend.controllers.amls.routes
 @import uk.gov.hmrc.agentregistrationfrontend.views.html.Layout
-@import uk.gov.hmrc.agentregistrationfrontend.views.html.register.partials.ContinueOrSaveForLater
+@import uk.gov.hmrc.agentregistrationfrontend.views.html.apply.partials.ContinueOrSaveForLater
 
 @this(
         layout: Layout,
