APB-10012 rename LlpRole to ApplicantRoleInLlp

--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/TaskListPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/TaskListPage.scala.html
@@ -79,7 +79,7 @@
                         classes = "govuk-tag--blue"
                     ))
                 ),
-                href = Some(applicantRoutes.LlpRoleController.show.url) // TODO Switch to CYA link when available
+                href = Some(applicantRoutes.ApplicantRoleInLlpController.show.url) // TODO Switch to CYA link when available
             )
         ),
         idPrefix = "contact"
