--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/applicantcontactdetails/MemberNamePage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/applicantcontactdetails/MemberNamePage.scala.html
@@ -14,7 +14,7 @@
  * limitations under the License.
  *@
 
-@import uk.gov.hmrc.agentregistration.shared.CompaniesHouseNameQuery
+@import uk.gov.hmrc.agentregistration.shared.contactdetails.CompaniesHouseNameQuery
 @import uk.gov.hmrc.agentregistrationfrontend.action.AgentApplicationRequest
 @import uk.gov.hmrc.agentregistrationfrontend.forms.CompaniesHouseNameQueryForm
 @import uk.gov.hmrc.agentregistrationfrontend.controllers.applicantcontactdetails.routes
