APB-10086 authorised name

--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/TaskListPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/TaskListPage.scala.html
@@ -30,7 +30,7 @@
 )
 
 @key = @{"taskList"}
-@title = @{messages(s"$key.title", request.agentApplication.getApplicantName)}
+@title = @{messages(s"$key.title", request.agentApplication.getApplicantBusinessName)}
 @amlsStatus = @{
     if(request.agentApplication.amlsDetails.exists(_.isComplete)) {
         TaskListItemStatus(content = Text(messages(s"$key.status.Completed")))
