--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/applicantcontactdetails/AuthorisedNamePage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/applicantcontactdetails/AuthorisedNamePage.scala.html
@@ -16,7 +16,6 @@
 
 @import uk.gov.hmrc.agentregistration.shared.contactdetails.CompaniesHouseNameQuery
 @import uk.gov.hmrc.agentregistrationfrontend.action.AgentApplicationRequest
-@import uk.gov.hmrc.agentregistrationfrontend.forms.CompaniesHouseNameQueryForm
 @import uk.gov.hmrc.agentregistrationfrontend.controllers.applicantcontactdetails.routes
 @import uk.gov.hmrc.agentregistrationfrontend.views.html.Layout
 @import uk.gov.hmrc.agentregistrationfrontend.views.html.apply.partials.ContinueOrSaveForLater
@@ -30,10 +29,10 @@
         continueOrSaveForLater: ContinueOrSaveForLater
 )
 
-@(form: Form[CompaniesHouseNameQuery])(implicit request: AgentApplicationRequest[AnyContent], messages: Messages)
+@(form: Form[String])(implicit request: AgentApplicationRequest[AnyContent], messages: Messages)
 
 @key = @{
-    "llpMemberName"
+    "authorisedName"
 }
 @title = @{messages(s"$key.title")}
 @layout(
@@ -41,28 +40,15 @@
     maybeForm = Some(form)
 ) {
     <h2 class="govuk-caption-l">@messages("applicant-contact-details.title")</h2>
-    <h1 class="govuk-heading-l">@title</h1>
-    <p class="govuk-body">@messages(s"$key.p1", request.agentApplication.getApplicantBusinessName)</p>
-    @formWithCSRF(action = routes.MemberNameController.submit) {
+    @formWithCSRF(action = routes.AuthorisedNameController.submit) {
         @govukInput(Input(
             label = Label(
-              content = Text(messages(s"$key.firstName.label")),
-              isPageHeading = false,
-              classes = "govuk-label--s"
+              content = Text(title),
+              isPageHeading = true,
+              classes = "govuk-label--l"
             ),
-            autocomplete = Some("given-name"),
-            classes = "govuk-!-width-two-thirds"
-        ).withFormField(form(CompaniesHouseNameQueryForm.firstNameKey)))
-
-        @govukInput(Input(
-            label = Label(
-                content = Text(messages(s"$key.lastName.label")),
-                isPageHeading = false,
-                classes = "govuk-label--s"
-            ),
-            autocomplete = Some("family-name"),
-            classes = "govuk-!-width-two-thirds"
-        ).withFormField(form(CompaniesHouseNameQueryForm.lastNameKey)))
+            autocomplete = Some("name")
+        ).withFormField(form(key)))
 
         @continueOrSaveForLater()
     }
