--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/applicantcontactdetails/AuthorisedNamePage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/applicantcontactdetails/AuthorisedNamePage.scala.html
@@ -14,9 +14,9 @@
  * limitations under the License.
  *@
 
-@import uk.gov.hmrc.agentregistration.shared.contactdetails.CompaniesHouseNameQuery
 @import uk.gov.hmrc.agentregistrationfrontend.action.AgentApplicationRequest
 @import uk.gov.hmrc.agentregistrationfrontend.controllers.applicantcontactdetails.routes
+@import uk.gov.hmrc.agentregistrationfrontend.forms.AuthorisedNameForm
 @import uk.gov.hmrc.agentregistrationfrontend.views.html.Layout
 @import uk.gov.hmrc.agentregistrationfrontend.views.html.apply.partials.ContinueOrSaveForLater
 @import uk.gov.hmrc.govukfrontend.views.html.components.implicits.RichInput
@@ -32,7 +32,7 @@
 @(form: Form[String])(implicit request: AgentApplicationRequest[AnyContent], messages: Messages)
 
 @key = @{
-    "authorisedName"
+    AuthorisedNameForm.key
 }
 @title = @{messages(s"$key.title")}
 @layout(
