[PP] it compiles WIP
Signed-off-by: paweldigital <173694350+paweldigital@users.noreply.github.com>

--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/applicantcontactdetails/ApplicantRoleInLlpPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/applicantcontactdetails/ApplicantRoleInLlpPage.scala.html
@@ -51,7 +51,10 @@
                 ))
             )),
             hint = Some(Hint(
-                content = HtmlContent(messages(s"$key.hint", request.agentApplication.getApplicantBusinessName))
+                content = HtmlContent(messages(
+                    s"$key.hint",
+                    request.agentApplication.asLlpApplication.getBusinessDetails.companyProfile.companyName
+                ))
             )),
             items = ApplicantRoleInLlp.values.toSeq.map(applicantRoleInLlp =>
                 RadioItem(
