--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/applicantcontactdetails/MemberNamePage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/applicantcontactdetails/MemberNamePage.scala.html
@@ -42,7 +42,11 @@
 ) {
     <h2 class="govuk-caption-l">@messages("applicant-contact-details.title")</h2>
     <h1 class="govuk-heading-l">@title</h1>
-    <p class="govuk-body">@messages(s"$key.p1", request.agentApplication.getApplicantBusinessName)</p>
+
+    <p class="govuk-body">@messages(
+        s"$key.p1",
+        request.agentApplication.asLlpApplication.getBusinessDetails.companyProfile.companyName
+    )</p>
     @formWithCSRF(action = routes.MemberNameController.submit) {
         @govukInput(Input(
             label = Label(
