[APB-10083] cleaner code
Signed-off-by: paweldigital <173694350+paweldigital@users.noreply.github.com>

--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/amls/CheckYourAnswersPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/amls/CheckYourAnswersPage.scala.html
@@ -32,7 +32,7 @@
 
 
 @(implicit
-        request: AgentApplicationRequest[AnyContent],
+        request: AgentApplicationRequest[?],
         messages: Messages
 )
 
