--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/applicantcontactdetails/ApplicantRoleInLlpPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/applicantcontactdetails/ApplicantRoleInLlpPage.scala.html
@@ -30,7 +30,7 @@
         continueOrSaveForLater: ContinueOrSaveForLater
 )
 
-@(form: Form[ApplicantRoleInLlp])(implicit request: AgentApplicationRequest[AnyContent], messages: Messages)
+@(form: Form[ApplicantRoleInLlp])(implicit request: AgentApplicationRequest[?], messages: Messages)
 
 @key = @{
     ApplicantRoleInLlpForm.key
