--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/TaskListPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/TaskListPage.scala.html
@@ -25,7 +25,7 @@
 )
 
 @()(implicit
-        request: AgentApplicationRequest[AnyContent],
+        request: AgentApplicationRequest[?],
         messages: Messages
 )
 
