APB-10083 reworked specs for form types

--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/applicantcontactdetails/MatchedMembersPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/applicantcontactdetails/MatchedMembersPage.scala.html
@@ -40,7 +40,7 @@
         officers: Seq[CompaniesHouseOfficer]
 )(implicit request: AgentApplicationRequest[?], messages: Messages)
 
-@key: String = @{ChOfficerSelectionForms.key}
+@key = @{ChOfficerSelectionForms.key}
 @makeDateOfBirth(dob: Option[CompaniesHouseDateOfBirth]) = {
   @if(dob.isDefined) {
      <div class="govuk-caption-m">
