APB-10143 align with remodelling

--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/applicantcontactdetails/CheckYourAnswersPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/applicantcontactdetails/CheckYourAnswersPage.scala.html
@@ -39,7 +39,7 @@
     messages(s"$key.title")
 }
 @contactDetails = @{
-    request.agentApplication.getApplicantContactDetails
+    request.agentApplication.asLlpApplication.getApplicantContactDetails
 }
 
 @llpMemberRow = @{
