--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/providedetails/LlpStartPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/providedetails/LlpStartPage.scala.html
@@ -14,7 +14,7 @@
  * limitations under the License.
  *@
 
-@import uk.gov.hmrc.agentregistration.shared.AgentApplication
+@import uk.gov.hmrc.agentregistration.shared.AgentApplicationLlp
 @import uk.gov.hmrc.agentregistrationfrontend.controllers.providedetails.routes
 @import uk.gov.hmrc.agentregistrationfrontend.views.html.Layout
 
@@ -24,16 +24,16 @@
 )
 
 @(
-        agentApplication: AgentApplication
+        agentApplication: AgentApplicationLlp
 )(implicit
         request: RequestHeader,
         messages: Messages
 )
 
-@key = @{"provideDetailsStart"}
+@key = @{"llpProvideDetailsStart"}
 @pageTitle = @{messages(s"$key.title")}
-@applicantName = @{agentApplication.asLlpApplication.getApplicantContactDetails.getApplicantName}
-@applicantBusinessName = @{agentApplication.asLlpApplication.getBusinessDetails.companyProfile.companyName}
+@applicantName = @{agentApplication.getApplicantContactDetails.getApplicantName}
+@applicantBusinessName = @{agentApplication.getBusinessDetails.companyProfile.companyName}
 
 @layout(pageTitle = pageTitle, suppressBackLink = true) {
     <h1 class="govuk-heading-l">@pageTitle</h1>
@@ -65,7 +65,7 @@
     <p class="govuk-body">
         @govukButton(Button(
             content = Text(messages("common.start")),
-            href=Some(routes.LlpMemberNameController.show.url),
+            href=Some(routes.StartController.resolve(agentApplication.linkId).url),
             isStartButton = true
         ))
     </p>
